--- a/README
+++ b/README
@@ -1,1 +1,4 @@
 webgnosus_client is a native iPhone XMPP client
+
+[![endorse](http://api.coderwall.com/troystribling/endorsecount.png)](http://coderwall.com/troystribling)
+
